syntax = "proto3";

package service;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


option java_package = "ar.edu.itba.pod.grpc";
option java_outer_classname = "CounterServiceModel";
option java_multiple_files = true;


service CounterService {
  rpc ListSectors(google.protobuf.Empty) returns (ListSectorsResponse);
  rpc ListCounters(ListCountersRequest) returns (ListCountersResponse);
  rpc AssignCounters(AssignCountersRequest) returns (AssignCountersResponse);
  rpc FreeCounters(FreeCountersRequest) returns (FreeCountersResponse);
  rpc CheckinCounters(CheckinCountersRequest) returns (CheckinCountersResponse);
  rpc ListPendingAssignments(google.protobuf.StringValue) returns (ListPendingAssignmentsResponse);
}


message CounterRange {
  int32 counter_from = 1;
  int32 counter_to = 2;
}

message Sectors{
  string sector_name = 1;
  repeated CounterRange counterRanges = 2;
}

message ListSectorsResponse {
  repeated Sectors sectors = 1;
}

message ListCountersRequest {
  string sector_name = 1;
  int32 counter_from = 2;
  int32 counter_to = 3;
}

message Counter {
  string airline_name = 1;
  CounterRange counter_range = 2;
  repeated string flight_codes = 3;
  int32 people_in_line = 4;
}

message ListCountersResponse {
  repeated Counter counters = 1;
}

message AssignCountersRequest {
  string sector_name = 1;
  int32 count_val = 2;
  repeated string flight_codes = 3;
  string airline_name = 4;
}

message AssignCountersResponse {
  string counter_count = 1;
  int32 counter_from = 2;
  int32 counter_to = 3;
  string sector_name = 4;
  string airline_name = 5;
  repeated string flight_codes = 6;
  optional int32 pending_assignments = 7;
}


message FreeCountersRequest {
  string sector_name = 1;
  int32 counter_from = 2;
  string airline_name = 3;
}

message FreeCountersResponse {
  string counter_count = 1;
  int32 counter_from = 2;
  int32 counter_to = 3;
  string sector_name = 4;
  repeated string flight_codes = 5;
}

message CheckinCountersRequest {
  string sector_name = 1;
  int32 counter_from = 2;
  string airline_name = 3;
}

message Checkin {
  string booking_code = 1;
  string flight_code = 2;
  int32 counter_number = 3;
}
message CheckinCountersResponse {
  repeated Checkin checkins = 1;
  // no testoy seguro si aca viene algo
}

message ListPendingAssignmentsResponse {
  repeated PendingAssignment pendingAssignments = 1;
}


message PendingAssignment {
  int32 counter_count = 1;
  string airline_name = 2;
  repeated string flight_codes = 3;
}